ingress-traffic-routing/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: ingress-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1

  template:
    metadata:
      labels:
        app: app1

    spec:
      containers:
      - name: app1
        image: nginxdemos/hello
        ports:
        - containerPort: 80
