ingress-traffic-routing/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: ingress-lab

spec:
  replicas: 2

  selector:
    matchLabels:
      app: app2

  template:
    metadata:
      labels:
        app: app2

    spec:
      containers:
      - name: app2
        image: hashicorp/http-echo
        args:
        - "-text=Welcome to APP2"

        ports:
        - containerPort: 5678
