ingress-traffic-routing/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ingress-lab

spec:
  selector:
    app: app1

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
