ingress-traffic-routing/app2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: ingress-lab

spec:
  selector:
    app: app2

  ports:
  - port: 80
    targetPort: 5678

  type: ClusterIP
