ingress-traffic-routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-no-auth
  namespace: ingress-lab

spec:
  ingressClassName: nginx

  rules:
  - host: app1.demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
