ingress-traffic-routing/wildcard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wildcard-ingress
  namespace: ingress-lab

spec:
  ingressClassName: nginx

  rules:
  - host: "*.demo.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
